// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H2 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 42.3,
      "lineHeight": 53.58,
      "paddingBottom": 3.6,
      "paddingTop": 6.3,
    }
  }
>
  "God is most glorified in us when we are most satisfied in Him" ― John Piper
</Text>
`;

exports[`the H2 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "Colfax-Bold",
      "fontSize": 42.3,
      "lineHeight": 53.58,
      "paddingBottom": 3.6,
      "paddingTop": 6.3,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H2 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 42.3,
      "lineHeight": 53.58,
      "paddingBottom": 3.6,
      "paddingTop": 6.3,
    }
  }
>
  Default H2 text
</Text>
`;
